--- a/noteapp/templates/layout.html
+++ b/noteapp/templates/layout.html
@@ -8,11 +8,18 @@
   <link
     rel="stylesheet"
     href='{{ url_for("static", filename="css/main.css") }}'>
-  <title>Document</title>
+  <title>python noteapp</title>
 </head>
-
 <body>
-
+  <nav>
+    <ul class='left'>
+      <li><a href="#">NoteApp</a></li>
+    </ul>
+    <ul class='right'>
+      <li><a href="#">+ New Note</a></li>
+    </ul>
+  </nav>
+  {% block content %}
+  {% endblock %}
 </body>
-
 </html>
