--- a/noteapp/static/css/main.css
+++ b/noteapp/static/css/main.css
@@ -1,3 +1,58 @@
 * {
-  background-color: goldenrod;
+  margin: 0;
+  padding: 0;
+}
+nav {
+  width: 100%;
+  height: 45px;
+  background-color: black;
+  display: flex;
+}
+nav ul {
+  flex-grow: 1;
+}
+nav ul li {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+}
+nav ul li a {
+  line-height: 45px;
+  display: inline-block;
+  height: 100%;
+  color: white;
+  margin-left: 0.5rem;
+  text-decoration: none;
+  width: 100%;
+}
+nav ul li a:first-child() {
+  float: left;
+}
+nav ul:nth-child(1) {
+  float: right;
+}
+nav ul li a:hover {
+  color: blue;
+  cursor: pointer;
+}
+.noteList {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.noteList .note {
+  width: 254px;
+  height: 100px;
+  background-color: #e67e22;
+  color: white;
+  box-sizing: border-box;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  opacity: 0.9;
+  cursor: pointer;
+}
+.noteList .note:hover {
+  opacity: 1;
 }
