--- a/noteapp/static/css/main.css
+++ b/noteapp/static/css/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Rubik', sans-serif;
 }
 nav {
   width: 100%;
@@ -23,7 +24,6 @@ nav ul li a {
   color: white;
   margin-left: 0.5rem;
   text-decoration: none;
-  width: 100%;
 }
 nav ul li a:first-child() {
   float: left;
@@ -55,4 +55,13 @@ nav ul li a:hover {
 }
 .noteList .note:hover {
   opacity: 1;
+}
+form {
+  width: 50vw;
+  margin: auto;
+  margin-top: 0.5rem;
+}
+form textarea {
+  width: 100%;
+  height: 300px;
 }
