--- a/noteapp/templates/layout.html
+++ b/noteapp/templates/layout.html
@@ -8,15 +8,18 @@
   <link
     rel="stylesheet"
     href='{{ url_for("static", filename="css/main.css") }}'>
+    <link
+      href="https://fonts.googleapis.com/css?family=Rubik"
+      rel="stylesheet">
   <title>python noteapp</title>
 </head>
 <body>
   <nav>
     <ul class='left'>
-      <li><a href="#">NoteApp</a></li>
+      <li><a href="/">NoteApp</a></li>
     </ul>
     <ul class='right'>
-      <li><a href="#">+ New Note</a></li>
+      <li><a href="/createnote">+ New Note</a></li>
     </ul>
   </nav>
   {% block content %}
