homepage displays notes

--- a/noteapp/templates/index.html
+++ b/noteapp/templates/index.html
@@ -2,9 +2,9 @@
 
 {% block content %}
   <div class="noteList">
-      {% for i in range(0, 100) %}
+      {% for note in notes %}
         <div class="note">
-          <p>Example note</p>
+          <p>{{ note }}</p>
         </div>
       {% endfor %}
   </div>
